# investment-agent

./: # Banking.txt  # 🏦 NSE Stock Forecast AI Agent —.txt  .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  FMP Key - BtItM5kH3USHa9aAWthBdbrTb.txt  Google Studio API key.txt  Great! Let me know the test results.txt  README.md  Untitled-1.py  agent.py  banking_agent.txt  dashboard.py  docker-compose.staging.yml  httpsgithub.comganeshpaisoleinvestm.txt  nse_master_agent.py  pharma_agent.py  phase1_data.py  phase2_analysis.py  phase3_report.py  phase4_dashboard.py  phase5_pdf_app.py  psu_adjustments.py  pyproject.toml  pytest.ini  python -B main.py --ticker TCS --no.txt  repo_git_log.txt  requirements.txt  requirements_master.txt  sentiment_agent.py  sk-proj-myWCF7iUScW26V2xh15Ax45J0hD.txt  stock_config_TEMPLATE-1.json
.devcontainer/: devcontainer.json
Old Files/: main.py
agent/: run.py
docs/: deploy.md  history_rewrite.md  rotate_keys.md
mergefix_backups/: nse_agent_utils_bse_parser.py
nse_agent/: .env  Dockerfile  README.md  bse_keyword_test.py  bse_keyword_test2.py  bse_test.py  cli.py  debug_currency.py  debug_infy.py  download_and_parse_attach.py  intraday_monitor.py  main.py  patch_banking_fixes.py  patch_fix.py  patch_fixes2.py  patch_mgmt.py  patch_v3.py  requirements.txt  screener.py  screener_diagnostic.py  screener_raw_BAJFINANCE.html  screener_raw_HDFCBANK.html  screener_raw_TCS.html  screener_scraper.py  worker.py
nse_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
proposal_agent/: CONTRIBUTING.md  (+5 more)
(+243 files in other folders)
